--- a/uasdm-web/src/main/ng2/src/app/site/component/platform/platform.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/platform/platform.component.html
@@ -29,6 +29,10 @@
         <option></option> 
         <option>Fixed Wing</option>
         <option>Hybrid</option>
+        <option>Multi-rotor</option>
+        <option>Helicopter</option>
+        <option>VTOL Fixed-wing</option>
+        <option>Quadcopter</option>
       </select>
     </div>
     <div class="btn-holder" style="text-align: right;">
