--- a/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
@@ -36,15 +36,15 @@
                 <div class="card-right" style="padding:0px; width: 7.2em;">
                     <ul style="list-style: none;padding: 0;">
                         <li style="padding: 3px 0 3px 0; min-width:6em;">
-                            <a class="fa fa-globe" aria-hidden="true" [ngClass]="{'active': product.orthoMapped}" (click)="handleMapIt(product)" title="View the Orthomosaic generated from the raw data using ODM.">Aerial</a>
+                            <a class="fa fa-globe" [style]="hasOrthoLayer(product) ? '' : 'cursor:not-allowed;'" aria-hidden="true" (click)="handleMapIt(product)" title="View the Orthomosaic generated from the raw data using ODM.">Aerial</a>
                             <i *ngIf="product.orthoMapped" [@bounceInOnEnter] [@bounceOutOnLeave] class="fas fa-check" style="color: #007276;float: right;vertical-align: middle;line-height: 20px;"></i>
                         </li>
                         <li style="padding: 3px 0 3px 0; min-width:7.2em;">
-                            <a class="fa fa-industry" aria-hidden="true" [ngClass]="{'active': product.demMapped}" (click)="handleMapDem(product)" title="View the DEM hillshade.">Hillshade</a>
+                            <a class="fa fa-industry" [style]="hasDemLayer(product) ? '' : 'cursor:not-allowed;'" aria-hidden="true" (click)="handleMapDem(product)" title="View the DEM hillshade.">Hillshade</a>
                             <i *ngIf="product.demMapped" [@bounceInOnEnter] [@bounceOutOnLeave] class="fas fa-check" style="color: #007276;float: right;vertical-align: middle;line-height: 20px;"></i>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
-                            <a class="fa fa-cube" aria-hidden="true" [ngClass]="{'active': false}" (click)="handlePointcloud(product)" title="View the 3D pointcloud for this product using the Potree viewer.">3D</a>
+                            <a class="fa fa-cube" [style]="product.hasPointcloud ? '' : 'cursor:not-allowed;'" aria-hidden="true" (click)="handlePointcloud(product)" title="View the 3D pointcloud for this product using the Potree viewer.">3D</a>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
                             <a class="fa fa-info-circle" (click)="handleGetInfo(product)" title="View more information about this product, including raw data.">Get Info</a>
