--- a/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
@@ -10,7 +10,7 @@
         <ul>
             <li>IDM Platform Version: <span id="automated-version-replace">0.12.0</span></li>
             <li>Open Drone Map (ODM): v2.4.7</li>
-            <li><a href="https://terraframe.atlassian.net/wiki/spaces/OSMRE/overview">View Documentation</a></li>
+            <li><a href="https://terraframe.atlassian.net/l/c/iHQKhY3Q">IDM Documentation</a></li>
         </ul>
         
     </div>
