--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -83,11 +83,11 @@
         <div *ngIf="activeTab === 'action-required'" class="tab-pane active" id="action-required">
           
           <div class="panel-group">
-            <div *ngFor="let taskGroup of collectionGroups | paginate: { id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of taskPage.resultSet | paginate: { id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
-                    <a data-toggle="collapse" (click)="taskGroup.visible = !taskGroup.visible" [attr.aria-expanded]="!taskGroup.visible"
+                    <a data-toggle="collapse" (click)="setVisibility(taskGroup)" [attr.aria-expanded]="!visible[taskGroup.collectionId]"
                       [attr.aria-controls]="'taskGroup'+ idx">
                       <h4>{{taskGroup.label}}</h4>
                     </a>
@@ -110,7 +110,7 @@
 
                 </div>
             
-                <div class="panel-body" [isAnimated]="false" [collapse]="!taskGroup.visible">
+                <div class="panel-body" [isAnimated]="false" [collapse]="!visible[taskGroup.collectionId]">
                   <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">                  
                     <div *ngIf="taskGroupType.tasks.length > 0" [id]="'task'+ grpi">
 
@@ -140,11 +140,11 @@
         
         <div *ngIf="activeTab === 'success'" class="tab-pane active" id="success">
           <div class="panel-group">
-            <div *ngFor="let taskGroup of collectionGroups | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of taskPage.resultSet | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
-                    <a data-toggle="collapse" (click)="taskGroup.visible = !taskGroup.visible" [attr.aria-expanded]="!taskGroup.visible"
+                    <a data-toggle="collapse" (click)="setVisibility(taskGroup)" [attr.aria-expanded]="!visible[taskGroup.collectionId]"
                       [attr.aria-controls]="'taskGroup'+ idx">
                       <h4>{{taskGroup.label}}</h4>
                     </a>
@@ -167,7 +167,7 @@
 
                 </div>
             
-                <div class="panel-body" [isAnimated]="false" [collapse]="!taskGroup.visible">
+                <div class="panel-body" [isAnimated]="false" [collapse]="!visible[taskGroup.collectionId]">
                 
                   <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">
                     <div *ngIf="taskGroupType.tasks.length > 0" [id]="'task'+ grpi">
@@ -195,11 +195,11 @@
 
         <div *ngIf="activeTab === 'all'" class="tab-pane active" id="all">
           <div class="panel-group">
-            <div *ngFor="let taskGroup of collectionGroups | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
+            <div *ngFor="let taskGroup of taskPage.resultSet | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
-                    <a data-toggle="collapse" (click)="taskGroup.visible = !taskGroup.visible" [attr.aria-expanded]="!taskGroup.visible"
+                    <a data-toggle="collapse" (click)="setVisibility(taskGroup)" [attr.aria-expanded]="!visible[taskGroup.collectionId]"
                       [attr.aria-controls]="'taskGroup'+ idx">
                       <h4>{{taskGroup.label}}</h4>
                     </a>
@@ -221,7 +221,7 @@
                   </div>
                 </div>
             
-                <div class="panel-body" [isAnimated]="false" [collapse]="!taskGroup.visible">                
+                <div class="panel-body" [isAnimated]="false" [collapse]="!visible[taskGroup.collectionId]">                
                   <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">
                     <div *ngIf="taskGroupType.tasks.length > 0" [id]="'task'+ grpi" >
 
