Updated upload wizard requirement documentation.

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -191,8 +191,7 @@
           <div class="well">
             <h4>All files uploaded through the upload wizard must</h4>
             <ul>
-              <li>be compressed into a .zip format </li>
-              <li>not contain any directories within the .zip file</li>
+              <li>be compressed into a .zip or .tar.gz format </li>
               <li>not contain spaces or special characters such as <, >, -, +, =, !, @, #, $, %, ^, &, *, ?,/,\ or apostrophes in any file name</li>
             </ul>
 
