--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -85,7 +85,7 @@
           <div class="panel-group">
             <div *ngFor="let taskGroup of taskPage.resultSet | paginate: { id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
-                <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
+                <div class="panel-heading clickable">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
                     <a data-toggle="collapse" (click)="setVisibility(taskGroup)" [attr.aria-expanded]="!visible[taskGroup.collectionId]"
                       [attr.aria-controls]="'taskGroup'+ idx">
@@ -110,27 +110,31 @@
 
                 </div>
                 
-                <div *ngIf="!taskGroup.loading" class="panel-body" [isAnimated]="false" [collapse]="!visible[taskGroup.collectionId]">
-                  <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">                  
-                    <div *ngIf="taskGroupType.tasks.length > 0" [id]="'task'+ grpi">
-
-                      <!-- Upload Tasks -->
-                      <div *ngIf="taskGroupType.type === 'UPLOAD'">
-                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Upload'" ></tasks-panel>
-                      </div>
-
-                      <!-- Process Tasks -->
-                      <div *ngIf="taskGroupType.type === 'PROCESS'">
-                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Process'" ></tasks-panel>
-                      </div>
-
-                      <!-- Store Tasks -->
-                      <div *ngIf="taskGroupType.type === 'STORE'">
-                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Store'" ></tasks-panel>
-                      </div>
-                
-                    </div>
-                  </div>
+                <div class="panel-body" [isAnimated]="false" [collapse]="!visible[taskGroup.collectionId]">
+                  <i *ngIf="taskGroup.loading" class="fa fa-spinner fa-spin task-group-loading"></i>
+                  
+                  <span *ngIf="!taskGroup.loading">
+	                  <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">                  
+	                    <div *ngIf="taskGroupType.tasks.length > 0" [id]="'task'+ grpi">
+	
+	                      <!-- Upload Tasks -->
+	                      <div *ngIf="taskGroupType.type === 'UPLOAD'">
+	                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Upload'" ></tasks-panel>
+	                      </div>
+	
+	                      <!-- Process Tasks -->
+	                      <div *ngIf="taskGroupType.type === 'PROCESS'">
+	                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Process'" ></tasks-panel>
+	                      </div>
+	
+	                      <!-- Store Tasks -->
+	                      <div *ngIf="taskGroupType.type === 'STORE'">
+	                        <tasks-panel [taskGroupType]="taskGroupType" [groupTypeId]="grpi" [taskCategory]="'Store'" ></tasks-panel>
+	                      </div>
+	                
+	                    </div>
+	                  </div>
+                  </span>
                 </div>
             </div>
 
@@ -142,7 +146,7 @@
           <div class="panel-group">
             <div *ngFor="let taskGroup of taskPage.resultSet | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
-                <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
+                <div class="panel-heading clickable">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
                     <a data-toggle="collapse" (click)="setVisibility(taskGroup)" [attr.aria-expanded]="!visible[taskGroup.collectionId]"
                       [attr.aria-controls]="'taskGroup'+ idx">
@@ -197,7 +201,7 @@
           <div class="panel-group">
             <div *ngFor="let taskGroup of taskPage.resultSet | paginate: {id: 'tasks-pg-ctrl', itemsPerPage: taskPage.pageSize, currentPage: taskPage.pageNumber, totalItems: taskPage.count }; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
-                <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
+                <div class="panel-heading clickable">
                   <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
                     <a data-toggle="collapse" (click)="setVisibility(taskGroup)" [attr.aria-expanded]="!visible[taskGroup.collectionId]"
                       [attr.aria-controls]="'taskGroup'+ idx">
@@ -222,7 +226,7 @@
                 </div>
                 
                 <div class="panel-body" [isAnimated]="false" [collapse]="!visible[taskGroup.collectionId]">
-                  <i *ngIf="taskGroup.loading" class="fa fa-spinner fa-spin"></i>
+                  <i *ngIf="taskGroup.loading" class="fa fa-spinner fa-spin task-group-loading"></i>
                   
                   <span *ngIf="!taskGroup.loading">
 	                  <div *ngFor="let taskGroupType of taskGroup.groups; let grpi=index">
