--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.css
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.css
@@ -33,12 +33,16 @@
     max-height: fit-content;
 }
 
+.task-group-loading {
+}
+
 .panel-group {
     margin-bottom: 0;
 }
 
-.panel-heading{
+.panel-heading {
   background-color: #e9e9e9;
+  margin-top: 20px;
 }
 
 .panel-heading.panel-heading-light {
