--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -46,7 +46,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <label>Date/Time: </label> &nbsp; {{product.dateTime}}
+          <label>Date/Time: </label> &nbsp; {{product.dateTime | idmdate}}
         </div>
       </div>
 
