--- a/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
@@ -9,7 +9,7 @@
 
         <h3>Software Versions</h3>
         <ul>
-            <li>IDM Platform Version: <span id="automated-version-replace">0.13.1</span></li>
+            <li>IDM Platform Version: <span id="automated-version-replace">0.13.2-SNAPSHOT</span></li>
             <li>Open Drone Map (ODM): 2.4.7</li>
             <li>GeoServer: 2.14.2</li>
         </ul>
