Init platform metadata CRUD for PlatformType, PlatformManufacturer, Platform, SensorType, Sensor, WaveLength

--- a/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
@@ -65,6 +65,18 @@
               <a class="dropdown-item" routerLink="/site/platforms" routerLinkActive="active">Platforms</a>
             </li>
             <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/platform-manufacturers" routerLinkActive="active">Platform Manufacturers</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/platform-types" routerLinkActive="active">Platform Types</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/sensor-types" routerLinkActive="active">Sensor Types</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/wave-lengths" routerLinkActive="active">Wave Lengths</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
               <a class="dropdown-item" routerLink="/admin/system-info" routerLinkActive="active">
                 <i></i>System Info
               </a>
