--- a/uasdm-web/src/main/ng2/src/app/site/component/platform/platform.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/platform/platform.component.html
@@ -17,23 +17,34 @@
   <form #ngForm="ngForm">
     <div class="form-group">
       <label>Name</label>
-      <input [(ngModel)]="platform.name" name="name" type="input" class="form-control" placeholder="Name" [disabled]="!newInstance" required />
+      <input [(ngModel)]="platform.name" name="name" type="input" class="form-control" placeholder="Name"
+        required />
     </div>
     <div class="form-group">
-      <label>Label</label>
-      <input [(ngModel)]="platform.displayLabel" name="displayLabel" type="input" class="form-control" placeholder="Display Label" required />
+      <label>Description</label>
+      <textarea [(ngModel)]="platform.description" name="description" type="input" class="form-control" placeholder="Description">
+      </textarea>
     </div>
     <div class="form-group">
       <label>Type</label>
-      <select [(ngModel)]="platform.platformType" name="platformType" type="input" class="form-control" required>
-        <option></option> 
-        <option>Fixed Wing</option>
-        <option>Hybrid</option>
-        <option>Multi-rotor</option>
-        <option>Helicopter</option>
-        <option>VTOL Fixed-wing</option>
-        <option>Quadcopter</option>
+      <select [(ngModel)]="platform.platformType" name="platformType" type="input" class="form-control" placeholder="Type">
+        <option></option>
+        <option *ngFor="let type of types" [value]="type.oid">{{type.label}}</option>
       </select>
+    </div>
+    <div class="form-group">
+      <label>Manufacturer</label>
+      <select [(ngModel)]="platform.manufacturer" name="manufacturer" type="input" class="form-control" placeholder="Type">
+        <option></option>
+        <option *ngFor="let manufacturer of manufacturers" [value]="manufacturer.oid">{{manufacturer.label}}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Sensors</label>
+      <div *ngFor="let sensor of sensors">
+        <boolean-field [value]="platform.sensors && (-1 !== platform.sensors.indexOf(sensor.oid))"
+          [label]="sensor.name" (valueChange)="updateSelectedSensor(sensor, $event)"></boolean-field>
+      </div>
     </div>
     <div class="btn-holder" style="text-align: right;">
       <button type="button" class="btn btn-default" (click)="handleOnCancel()">Cancel</button>
