--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
@@ -17,24 +17,26 @@
   <form #ngForm="ngForm">
     <div class="form-group">
       <label>Name</label>
-      <input [(ngModel)]="sensor.name" name="name" type="input" class="form-control" placeholder="Name" [disabled]="!newInstance" required />
+      <input [(ngModel)]="sensor.name" name="name" type="input" class="form-control" placeholder="Name"
+        required />
     </div>
     <div class="form-group">
-      <label>Label</label>
-      <input [(ngModel)]="sensor.displayLabel" name="displayLabel" type="input" class="form-control" placeholder="Display Label" required />
+      <label>Description</label>
+      <textarea [(ngModel)]="sensor.description" name="description" type="input" class="form-control" placeholder="Description">
+      </textarea>
     </div>
     <div class="form-group">
       <label>Type</label>
-      <input [(ngModel)]="sensor.sensorType" name="sensorType" type="input" class="form-control" placeholder="Type" required />
-    </div>
-    <div class="form-group">
-      <label>Model</label>
-      <input [(ngModel)]="sensor.model" name="model" type="input" class="form-control" placeholder="Model" required />
+      <select [(ngModel)]="sensor.sensorType" name="sensorType" type="input" class="form-control" placeholder="Type">
+        <option></option>
+        <option *ngFor="let type of types" [value]="type.oid">{{type.label}}</option>
+      </select>
     </div>
     <div class="form-group">
       <label>Wave Length</label>
-      <div *ngFor="let wavelength of waveLengths">
-        <boolean-field [value]="sensor.waveLength && (-1 !== sensor.waveLength.indexOf(wavelength))" [label]="wavelength" (valueChange)="updateSelectedWaveLength(wavelength, $event)"></boolean-field>
+      <div *ngFor="let wavelength of wavelengths">
+        <boolean-field [value]="sensor.wavelengths && (-1 !== sensor.wavelengths.indexOf(wavelength.oid))"
+          [label]="wavelength.label" (valueChange)="updateSelectedWaveLength(wavelength, $event)"></boolean-field>
       </div>
     </div>
     <div class="btn-holder" style="text-align: right;">
