--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
@@ -1,47 +1,83 @@
-<div *ngIf="sensor != null" class="modal-body">
-  <div *ngIf="message != null" class="error-container">
-    <div class="label-holder">
-      <strong>Error</strong>
-    </div>
-    <div class="holder">
-      <div>
-        <p class="error-message">{{message}}</p>
+<div>
+  <uasdm-header></uasdm-header>
+
+  <div id="app-container" class="container">
+    <div *ngIf="message != null" class="error-container">
+      <div class="label-holder">
+        <strong>Error</strong>
+      </div>
+      <div class="holder">
+        <div>
+          <p class="error-message">{{message}}</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="modal-title-container">
-    <h3>Sensor</h3>
-  </div>
+    <div class="modal-title-container">
+      <h3>Sensor</h3>
+    </div>
 
-  <form #ngForm="ngForm">
-    <div class="form-group">
-      <label>Name</label>
-      <input [(ngModel)]="sensor.name" name="name" type="input" class="form-control" placeholder="Name"
-        required />
-    </div>
-    <div class="form-group">
-      <label>Description</label>
-      <textarea [(ngModel)]="sensor.description" name="description" type="input" class="form-control" placeholder="Description">
-      </textarea>
-    </div>
-    <div class="form-group">
-      <label>Type</label>
-      <select [(ngModel)]="sensor.sensorType" name="sensorType" type="input" class="form-control" placeholder="Type">
-        <option></option>
-        <option *ngFor="let type of types" [value]="type.oid">{{type.label}}</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label>Wave Length</label>
-      <div *ngFor="let wavelength of wavelengths">
-        <boolean-field [value]="sensor.wavelengths && (-1 !== sensor.wavelengths.indexOf(wavelength.oid))"
-          [label]="wavelength.label" (valueChange)="updateSelectedWaveLength(wavelength, $event)"></boolean-field>
+    <form #ngForm="ngForm">
+      <div class="form-group">
+        <label>Name</label>
+        <input [(ngModel)]="sensor.name" name="name" type="input" class="form-control" placeholder="Name"
+          [disabled]="mode === 'READ'" required />
       </div>
-    </div>
-    <div class="btn-holder" style="text-align: right;">
-      <button type="button" class="btn btn-default" (click)="handleOnCancel()">Cancel</button>
-      <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()" [disabled]="!ngForm.valid">Apply</button>
-    </div>
-  </form>
+      <div class="form-group">
+        <label>Description</label>
+        <textarea [(ngModel)]="sensor.description" name="description" type="input" class="form-control"
+          [disabled]="mode === 'READ'" placeholder="Description">
+        </textarea>
+      </div>
+      <div class="form-group">
+        <label>Type</label>
+        <select [(ngModel)]="sensor.sensorType" name="sensorType" type="input" class="form-control"
+          [disabled]="mode === 'READ'" placeholder="Type">
+          <option></option>
+          <option *ngFor="let type of types" [value]="type.oid">{{type.label}}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Pixel Size Width</label>
+        <input [(ngModel)]="sensor.pixelSizeWidth" name="pixelSizeWidth" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+      </div>
+      <div class="form-group">
+        <label>Pixel Size Height</label>
+        <input [(ngModel)]="sensor.pixelSizeHeight" name="pixelSizeHeight" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+      </div>
+      <div class="form-group">
+        <label>Sensor Width</label>
+        <input [(ngModel)]="sensor.sensorWidth" name="sensorWidth" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+      </div>
+      <div class="form-group">
+        <label>Sensor Height</label>
+        <input [(ngModel)]="sensor.sensorHeight" name="sensorHeight" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+      </div>
+      <div class="form-group">
+        <label>Wave Length</label>
+        <div *ngFor="let wavelength of wavelengths">
+          <boolean-field [value]="sensor.wavelengths && (-1 !== sensor.wavelengths.indexOf(wavelength.oid))"
+            [label]="wavelength.label" (valueChange)="updateSelectedWaveLength(wavelength, $event)"
+            [disabled]="mode === 'READ'"></boolean-field>
+        </div>
+      </div>
+      <div *ngIf="mode === 'READ' && sensor.platforms != null && sensor.platforms.length > 0" class="form-group">
+        <label>Used on Platforms</label>
+        <ul>
+          <li *ngFor="let platform of sensor.platforms">
+            <a [routerLink]="['/site/platform', platform.oid]">{{platform.name}}</a>
+          </li>
+        </ul>
+      </div>
+
+      <div *ngIf="mode === 'WRITE'" class="btn-holder" style="text-align: right;">
+        <button *ngIf="!newInstance" type="button" class="btn btn-default" (click)="handleOnCancel()">Cancel</button>
+        <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()"
+          [disabled]="!ngForm.valid">Apply</button>
+      </div>
+      <div *ngIf="mode === 'READ'" class="btn-holder" style="text-align: right;">
+        <button type="submit" class="btn btn-primary" (click)="handleOnEdit()">Edit</button>
+      </div>
+    </form>
+  </div>
 </div>
